--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 services:
   webserver:
-    image: ghcr.io/paperless-ngx/paperless-ngx:latest
+    image: simpledashboard
+    build: .
     restart: unless-stopped
     ports:
       - "8081:8081"
     volumes:
       - ./data:/usr/data
-#    env_file: docker-compose.env
-volumes:
-  data:
