added env file to docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   webserver:
     image: simpledashboard
+    env_file:
+      - .env
     build: .
     restart: unless-stopped
     ports:
